# tryoffdiff

./: .gitignore  .pre-commit-config.yaml  README.md  _config.yml  index.html  pyproject.toml
notebooks/: vitonhd_duplicates.ipynb
references/: README.md  v1_instructions.md  v2_instructions.md  vitonhd_duplicate_filenames.json
static/js/: index.js
tryoffdiff/: __init__.py  config.py  dataset.py  features.py  plots.py
tryoffdiff/modeling/: eval.py  eval_vis.py  model.py  predict.py  train.py
